--- a/src/main/webapp/PalmResort/assets/css/palm.css
+++ b/src/main/webapp/PalmResort/assets/css/palm.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
-
 /* ========================================== 
 	00. Reset
 	01. Header & Footer
 	02. Common Layout
 	03. Login
+	04. Index
 	==========================================*/
 
 /* 00. Reset ================================*/
+@import url('https://fonts.cdnfonts.com/css/trajan-pro');
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
@@ -55,7 +56,10 @@
    src: url(../webfonts/NotoSansKR-Black.woff2) format('woff2'),
         url(../webfonts/NotoSansKR-Black.woff) format('woff'),
         url(../webfonts/NotoSansKR-Black.otf) format('opentype');
- } 
+ }
+ 
+
+ 
 body {font-family:"Noto Sans KR", "Sans-serif";}
 a, a:hover, a:focus, a:active {text-decoration:none;color:inherit;}
 .form-control::placeholder {font-weight:400;color:var(--bs-gray-400)}
@@ -80,14 +84,12 @@ a, a:hover, a:focus, a:active {text-decoration:none;color:inherit;}
 /* 02. Layout ================================*/
 @media (max-width: 767.98px) {
 	.app-content .app-content-padding {padding:20px 20px 60px}
+	/* .app-content-full-height .app-content {min-height:calc(100vh - 120px);} */
 	}
 .app-sidebar-content {overflow-x:hidden !important;}
 .app-sidebar .menu .menu-item.logout {position:absolute;bottom:0;width:100%;border-top:1px solid #424242} 
 
 
-
-
-	
 /* 03. Login =================================*/
 .login.login-with-news-feed .login-header .brand .logo, .register.register-with-news-feed .login-header .brand .logo {border:none;background-color:transparent;font-size:unset;}
 .login.login-with-news-feed, .register.register-with-news-feed.find {min-height:unset}
@@ -101,8 +103,11 @@ a, a:hover, a:focus, a:active {text-decoration:none;color:inherit;}
 .register-content .text > i {margin-right:5px}
 
 
-
-
+/* 04. Index =================================*/
+.app-content-full-height .index-wrap {height:100%;background:url(../img/palm01.png) no-repeat center;background-size:cover;overflow:hidden;display:flex;flex-flow:column;}
+.app-content-full-height .index-wrap .intro-text {margin-top:100px;font-size:2.5rem;font-weight:900;text-align:center;font-family: 'Trajan Pro', sans-serif;}
+.app-content-full-height .index-wrap .btn-wrap {margin-top:auto;margin-bottom:50px}
+.app-content-full-height .index-wrap li {margin:10px}
 
 
 
