상품 소개 테이블 수정

--- a/src/main/webapp/PalmResort/assets/css/palm.css
+++ b/src/main/webapp/PalmResort/assets/css/palm.css
@@ -100,6 +100,7 @@ ul li {list-style:none;}
 /* display */
 .inline-flex {display:flex;align-items:center;grid-column-gap:10px;}
 
+.table + .table {margin-top:25px;}
 .table-striped th, .table-striped td {text-align:center;vertical-align:middle;}
 .table-striped th + th, .table-striped td + td {border-left:1px solid var(--bs-component-table-border-color);}
 
