--- a/src/main/webapp/PalmResort/assets/css/palm.css
+++ b/src/main/webapp/PalmResort/assets/css/palm.css
@@ -129,10 +129,12 @@ ul li {list-style:none;}
 .app-content-full-height .index-wrap li {margin:10px}
 
 /* 회원 메인 */
-.main-btn-wrap {display:grid;grid-template-columns:1fr 1fr;grid-gap:20px 30px;margin:auto}
-.main-btn-wrap a {border-radius:50%;width:120px;height:120px;display:inline-flex;flex-flow:column;justify-content:center;font-size:1.2rem;font-weight:400;}
-.main-btn-wrap a > i {margin-bottom:8px}
-.main-btn-wrap a:nth-child(odd) {margin-left:auto;}
+.main-btn-wrap {margin:auto;text-align:center}
+.main-btn-wrap .goto-menu{display:grid;grid-template-columns:1fr 1fr;grid-gap:20px 30px;}
+.main-btn-wrap .goto-menu a {border-radius:50%;width:120px;height:120px;display:inline-flex;flex-flow:column;justify-content:center;font-size:1.2rem;font-weight:400;}
+.main-btn-wrap .goto-menu a > i {margin-bottom:8px}
+.main-btn-wrap .goto-menu a:nth-child(odd) {margin-left:auto;}
+.main-btn-wrap .btn-set {margin-top:20px;font-weight:400}
 
 
 /* 05. Reserve =================================*/
