--- a/src/main/webapp/PalmResort/assets/css/palm.css
+++ b/src/main/webapp/PalmResort/assets/css/palm.css
@@ -183,6 +183,8 @@ ul li {list-style:none;}
 
 .qna-label.apply{color:var(--bs-app-theme-color);background-color:var(--bs-primary);}
 .qna-label.finish{color:var(--bs-app-theme-color);background-color:var(--bs-gray-dark);}
+.qna_secret_chk{display:flex; justify-content:flex-end; padding: .20rem .75rem 0 0;}
+.qna_secret_chk span {margin-left:.4375rem;}
 
 .btn-icon.btn-write {position:fixed;right:20px;bottom:20px;z-index:10}
 
